# hope.rs

./: Cargo.toml  Config.toml  Dockerfile  Makefile  README.md
backend/: Cargo.toml
backend/src/: cli.yaml  lib.rs  main.rs
backend/src/server/: mod.rs
backend/src/websocket/: mod.rs
backend/static/html/: index.html
backend/static/js/: websocket.js
bn/: Cargo.toml
bn/src/: arith.rs  lib.rs
bn/src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  tests.rs
bn/src/groups/: mod.rs
cli/: Cargo.toml
cli/src/: cli.yaml  main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
server/: Cargo.toml
server/src/server/: mod.rs
server/static/html/: 404.html
src/: config.rs  lib.rs
src/protocol/: mod.rs  model.rs  request.rs
