[package]
authors = ["Georg Bramm <georg.bramm@aisec.fraunhofer.de>"]
categories = ["cryptography"]
description = "a hope framework including library, frontend and backend"
documentation = "https://docs.rs/hope"
homepage = "https://github.com/georgbramm/hope"
keywords = [
  "paillier",
  "elgamal",
  "cryptography",
  "homomorphic-encrypt",
  "secure-computation",
]
license = "MIT"
name = "hope" 
readme = "README.md"
repository = "https://github.com/georgbramm/hope.rs"
version = "1.0.0"
edition = "2018"

[badges]
circle-ci = { repository = "georgbramm/hope.rs", branch = "master" }
codecov = { repository = "georgbramm/hope.rs", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.16", features = ["derive"] }
serde_json = "1.0.4"
serde_derive = "1.0.16"
num-bigint = { version = "0.2", features = ["serde"] }
bn = { version = "0.4.6", path = "bn" }
toml = "0.5.6"
failure = "0.1.6"
mongodb = "0.4.0"
bson = "0.14"

[features]

[workspace]
members = [
    "backend",
    "bn",
    "cli",
    "library",
    "frontend"
]
