[package]
name = "hope_backend"
version = "0.1.1"
authors = ["bramm <georg.bramm@aisec.fraunhofer.de>"]
edition = "2018"

[[bin]]
name = "hope_backend"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
rand = "0.5"
num-bigint = { version = "0.2", features = ["rand", "serde"] }
mongodb = "0.4.0"
env_logger = "0.6"
bincode = "1.2.1"
clap = { version="2.27.1", features=["yaml"] }
base64 = "0.10.1"
num_cpus = "1.12.0"
url = "2.1.1"
failure = "0.1.6"
hope = { version = "1.0.0", path = ".." }
hope_library = { version = "0.1.1", path = "../library" }