[package]
name = "hope_cli"
version = "0.1.0"
authors = ["bramm <georg.bramm@aisec.fraunhofer.de>"]
edition = "2018"

[[bin]]
name = "hope-cli"
path = "src/main.rs"

[dependencies]
failure = "0.1.6"
hope = { version = "1.0.0", path = ".." }
hope_library = { version = "0.1.1", path = "../library" }
hope_server = { version = "0.1.1", path = "../server" }
clap = "2.27.1"
serde = "1.0.16"
serde_json = "1.0.4"