[package]
name = "hope_frontend"
version = "0.1.1"
authors = ["bramm <georg.bramm@aisec.fraunhofer.de>"]
edition = "2018"

[[bin]]
name = "hope_frontend"
path = "src/main.rs"

[dependencies]
failure = "0.1.6"
hope = { version = "1.0.0", path = ".." }
yew = "0.11.0"
hope_library = { version = "0.1.1", path = "../library" }
